add gitignore (idea files), updated better sample

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 requirejs.config({
     baseUrl: 'https://www.cleverfocus.com/baller/' // tell Require root dir for View Scripts
 });
-BallerView("root1", "index.js", 320); // create Baller With script
+BallerView("root1", "sample.js", 320); // create Baller With script
 </script>
 
